--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ google-cloud-documentai
 python-multipart   # if you later want to upload files via form-data
 pydantic-settings 
 prettytable
+python-dotenv
+httpx
