--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: rubber
     ports:
       - "8008:8008"
+    env_file:
+      - .env          # 👈 tell Docker to load .env
     environment:
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
